# Sapphire

./: ErrorMessages.txt  Instructions.txt  README.md  Sapphire  Sapphire.cabal  Sapphire.hi  Sapphire.hs  SyntaxSheet.txt  recompile.sh  sapphire.hi  sapphire.sh
ErrorChecker/: ErrorChecker.hi  ErrorChecker.hs
ExternalFiles/: README.txt  SyntaxSheet.txt
MainProgram/: Sapphire.hs
Parsers/: Parsing.hi  Parsing.hs  _Parsing.hsplay  parsing.hi
ProgramInformation/: ProgramInitialiser.hi  ProgramInitialiser.hs  _ProgramInitialiser.hsplay  programinitialiser.hi
SapphireExecutables/: error.sapphire  fvehundred.sapphire  fvetho.sapphire  helloworld.sapphire  leet.sapphire  math.sapphire  onehundred.sapphire  prime.sapphire  temp.sapphire  test.sapphire  twnttho.sapphire
ScalaExecutables/: leet.scala  math.scala  temp.scala  test.scala
TestingFiles/: InitialTesting.txt
