name: Sapphire
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
extra-source-files:
    TestingFiles/InitialTesting.txt
    ExternalFiles/README.txt
    ExternalFiles/SyntaxSheet.txt
x-ghc-framework-version: 7.10.3-5.18-1
x-last-ide-version: HfM1.3.0
Executable Sapphire
  main-is: MainProgram/Sapphire.hs
  buildable: True
  build-depends:
      base -any,
      split -any
  other-modules:
      SapphireResources
      ErrorChecking
      ProgramInformation.ProgramInitialiser
      Parsers.Parsing
      Testing
